Add Web project

--- a/OrbitalSol/OrbitalSol.WebApp/ClientApp/src/app/app.component.html
+++ b/OrbitalSol/OrbitalSol.WebApp/ClientApp/src/app/app.component.html
@@ -1,6 +1,4 @@
-<body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</body>
+<!-- <app-top-menu></app-top-menu> -->
+<!-- <app-top-menu></app-top-menu> -->
+<!-- <app-projec-template></app-projec-template> -->
+<router-outlet></router-outlet>
